--- a/src/style/partials/navigation.scss
+++ b/src/style/partials/navigation.scss
@@ -2,7 +2,6 @@
 
 .wrapper-navigation {
   background-color: map-get($color-scheme-one, dirty-blue);
-  min-width: 350px;
 
   .container {
     display: flex;
